--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ figure {
 
 .aboutcontent {
 	display: inline-block;
+	width: 100%;
 }
 
 .aboutcontent img {
@@ -136,4 +137,60 @@ h2, h3 {
 nav, p footer {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #666666;
+}
+
+/*Contact Box*/
+input[type=text] {
+	width: 100%;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #cccccc;
+	padding: 5px 0px;
+	font-size: 115%;
+}
+
+input[name=Your-Message] {
+	height: 200px;
+}
+
+input[type=button], input[type=submit] {
+    background-color: #4aaaa5;
+    border: none;
+    color: white;
+    padding: 8px 24px;
+    text-decoration: none;
+    margin: 10px 0px;
+    cursor: pointer;
+    font-size: 115%;
+}
+
+/*Gallery*/
+div.gallery {
+    margin: 40px 20px 20px 20px;
+    border: 0px solid white;
+    float: left;
+    width: 42%;
+    position: relative;
+    z-index: 1;
+}
+
+div.gallery:hover {
+    border: 0px solid white;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+    color: white;
+    background-color: #4aaaa5;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 100%;
 }
